--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "multer": "^1.4.2"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "eslint": "^8.6.0"
   }
 }
