--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uploadserver",
+  "name": "simple-image-upload-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,10 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "formidable": "^3.2.1",
     "ipaddr.js": "^1.9.1",
-    "mongoose": "^5.12.4",
-    "ms": "^2.0.0",
-    "multer": "^1.4.2"
+    "mongoose": "^5.12.4"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
