--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "killbinvlog",
   "license": "ISC",
   "dependencies": {
+    "content-disposition": "^0.5.4",
     "express": "^4.17.1",
     "express-rate-limit": "^6.0.5",
     "formidable": "^3.2.1",
