--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^6.0.5",
     "formidable": "^3.2.1",
+    "helmet": "5.0.2",
     "ipaddr.js": "^2.0.1",
     "mongoose": "^6.1.7"
   },
