--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,9 @@ config.js
 # not found image
 assets/images/not-found.jpg
 
+# public directory
+public/
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
