--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "author": "killbinvlog",
   "license": "ISC",
   "dependencies": {
-    "content-disposition": "^0.5.4",
-    "express": "^4.17.1",
-    "express-rate-limit": "^6.0.5",
-    "formidable": "^3.2.1",
+    "content-disposition": "0.5.4",
+    "express": "4.18.1",
+    "express-rate-limit": "6.4.0",
+    "formidable": "3.2.3",
     "helmet": "5.0.2",
-    "ipaddr.js": "^2.0.1",
-    "mongoose": "^6.1.7"
+    "ipaddr.js": "2.0.1",
+    "mongoose": "6.3.3"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
-    "eslint": "^8.6.0"
+    "dotenv": "16.0.1",
+    "eslint": "8.15.0"
   }
 }
