--- a/example.env
+++ b/example.env
@@ -1,6 +1,7 @@
 # Database
 
-MONGODB_URI="mongodb+srv://<username>:<password>@<server>/<database>?retryWrites=true&w=majority"
+# mongodb+srv://<username>:<password>@<server>/<database>?retryWrites=true&w=majority
+MONGODB_URI="mongodb://mongo/uploads"
 
 # Auth
 
@@ -8,5 +9,5 @@ API_TOKEN="YOUR_SECRET"
 
 # Server
 
-SERVER_PORT=80
-SERVER_HOSTNAME="127.0.0.1"
+SERVER_PORT=5001
+SERVER_HOSTNAME="0.0.0.0"
