--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ."
   },
   "author": "killbinvlog",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "content-disposition": "0.5.4",
     "express": "4.18.1",
