Modification in the configuration and addition of comments for almost every parameter of the configuration

--- a/example.env
+++ b/example.env
@@ -1,13 +1,16 @@
-# Database
+# Database configuration
 
-# mongodb+srv://<username>:<password>@<server>/<database>?retryWrites=true&w=majority
+# The connection string to the database (please refer to https://www.mongodb.com/docs/manual/reference/connection-string/ for more information)
 MONGODB_URI="mongodb://mongo/uploads"
 
-# Auth
+# Auth configuration
 
+# The secret key used to authenticate the requests when needed
 API_TOKEN="YOUR_SECRET"
 
-# Server
+# Server configuration
 
+# The port the server will listen on
 SERVER_PORT=5001
+# The hostname the server will listen on
 SERVER_HOSTNAME="0.0.0.0"
