--- a/example.env
+++ b/example.env
@@ -6,7 +6,7 @@ MONGODB_URI="mongodb://mongo/uploads"
 # Auth configuration
 
 # The secret key used to authenticate the requests when needed
-API_TOKEN="YOUR_SECRET"
+AUTH_SECRET_KEY="YOUR_SECRET_KEY"
 
 # Server configuration
 
